--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.8",
-    "mongoose-intl-phone-number": "^1.1.1"
+    "mongoose-intl-phone-number": "^1.1.1",
+    "mongoose-type-phone": "^1.0.1",
+    "mongoose-unique-validator": "^3.0.0",
+    "phone-validation": "^0.1.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
