--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose-intl-phone-number": "^1.1.1",
     "mongoose-type-phone": "^1.0.1",
     "mongoose-unique-validator": "^3.0.0",
+    "multer": "^1.4.4",
     "phone-validation": "^0.1.1"
   },
   "devDependencies": {
